src/client/site/Static/MenuBar/styles.less
@import "../../../variables.less";

.menuBar {
  top: 0;
  left: 0;
  z-index: 1;
}

.option {
  border: 1px solid black;
}

.menuIcon {
  width: 2em;
  height: 2em;
  display: inline-block;
  border: 1px solid black;
}

.optionDiv {
  display: block;
  border-bottom: 1px solid black;
  width: 10em;
}

// h1 elements that are children of .optionDiv
.optionDiv h1 {
  margin: 0;
}

.optionLink {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none;
  text-decoration: none;
  color: @menu-color;
}

.optionLink:hover {
  cursor: pointer;
  text-decoration: underline;
}

.optionLink:visited {
  color: @menu-color;
}

@media (min-width: @min-width) {
  .menuBar {
    width: 100%;
    text-align: center;
    z-index: 1;
  }

  .optionDiv {
    display: inline-block;
    margin-left: 2%;
    margin-right: 2%;
    border: none;
    z-index: 1;
  }
  .menuOptionsWrapper {
    display: block !important;
  }

  .menuIcon {
    display: none;
  }

  .optionLink:hover {
    cursor: pointer;
    text-decoration: underline;
  }
}

